Fix header overlap, make buttons work better on mobile

--- a/_sass/buttons.scss
+++ b/_sass/buttons.scss
@@ -15,6 +15,7 @@
 .btn-ghost:hover,
 .btn-ghost:focus {
   color: $white;
+  outline: none;
 }
 .btn h1 {
   margin-top: 0;
