--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -2,7 +2,7 @@ header {
   position: fixed;
   top: 20px;
   left: 20px;
-  width: 100%;
+  width: 25%;
   z-index: 10;
 }
 header .logo {
@@ -83,6 +83,7 @@ header .logo {
 }
 .nav-list li {
   display: inline-block;
+  margin-top: 15px;
   margin-bottom: 0;
   margin-left: 15px;
 }
@@ -96,6 +97,15 @@ header .logo {
   font-weight: bold;
   padding: 10px 25px;
   width: 100%;
+  background-color: $ocean;
+}
+@media (min-width: 768px) {
+  .nav-list li {
+    margin-top: 0;
+  }
+  .nav-list li a {
+    background-color: transparent;
+  }
 }
 .nav-list li a:hover {
   text-decoration: none;
